fixed loading text not aligned

--- a/packages/frontend/src/app/app.component.scss
+++ b/packages/frontend/src/app/app.component.scss
@@ -45,6 +45,7 @@ mat-toolbar {
   padding: 10rem;
   gap: 3rem;
   box-sizing: border-box;
+  text-align: center;
 }
 
 
